--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -78,7 +78,14 @@ jobs:
       #     pytest --maxfail=1 --disable-warnings -q
 
       # Step 9: Deploy or update CloudFormation stack
-      #
+      - name: 🧪 Debug environment
+        run: |
+          echo "DEPLOY_BUCKET is set to: $DEPLOY_BUCKET"
+          echo "ALERT_EMAIL is set to: $ALERT_EMAIL"
+        env:
+          DEPLOY_BUCKET: ${{ secrets.DEPLOY_BUCKET }}
+          ALERT_EMAIL: ${{ secrets.ALERT_EMAIL }}
+
       - name: 🚀 Deploy CloudFormation stack
         run: |
           aws cloudformation deploy \
