deleting existing stack

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -84,6 +84,16 @@ jobs:
           echo "ALERT_EMAIL is set to: $ALERT_EMAIL"
         # env:
         #   ALERT_EMAIL: ${{ secrets.ALERT_EMAIL }}
+      - name: 🧹 Delete existing stack if ROLLBACK_COMPLETE
+        run: |
+          status=$(aws cloudformation describe-stacks --stack-name smart-expense-tracker --query "Stacks[0].StackStatus" --output text || echo "NOT_FOUND")
+          if [ "$status" = "ROLLBACK_COMPLETE" ]; then
+            echo "Deleting old stack in ROLLBACK_COMPLETE state..."
+            aws cloudformation delete-stack --stack-name smart-expense-tracker
+            aws cloudformation wait stack-delete-complete --stack-name smart-expense-tracker
+          else
+            echo "No rollback stack found, continuing..."
+          fi
 
       - name: 🚀 Deploy CloudFormation stack
         run: |
