--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -94,6 +94,20 @@ jobs:
           else
             echo "No rollback stack found, continuing..."
           fi
+      - name: 📦 Upload Lambda packages to S3
+        run: |
+          aws s3 cp lambda/add_expense.zip s3://$DEPLOY_BUCKET/add_expense.zip
+          aws s3 cp lambda/get_expenses.zip s3://$DEPLOY_BUCKET/get_expenses.zip
+          aws s3 cp lambda/delete_expense.zip s3://$DEPLOY_BUCKET/delete_expense.zip
+          aws s3 cp lambda/presign_upload.zip s3://$DEPLOY_BUCKET/presign_upload.zip
+      - name: ✅ Verify Lambda packages uploaded successfully
+        run: |
+          echo "Checking if Lambda ZIPs exist in $DEPLOY_BUCKET ..."
+          aws s3 ls s3://$DEPLOY_BUCKET/add_expense.zip || { echo "❌ add_expense.zip not found!"; exit 1; }
+          aws s3 ls s3://$DEPLOY_BUCKET/get_expenses.zip || { echo "❌ get_expenses.zip not found!"; exit 1; }
+          aws s3 ls s3://$DEPLOY_BUCKET/delete_expense.zip || { echo "❌ delete_expense.zip not found!"; exit 1; }
+          aws s3 ls s3://$DEPLOY_BUCKET/presign_upload.zip || { echo "❌ presign_upload.zip not found!"; exit 1; }
+          echo "✅ All Lambda ZIPs verified in S3!"
 
       - name: 🚀 Deploy CloudFormation stack
         run: |
